# KmeansColorSeg

./: CMakeLists.txt  CalculateK.cpp  CalculateK.hpp  Calculator.hpp  CoordEucCalculator.cpp  CoordEucCalculator.hpp  CosineCalculator.cpp  CosineCalculator.hpp  EuclidianCalculator.cpp  EuclidianCalculator.hpp  HSVEucCalculator.cpp  HSVEucCalculator.hpp  KMeansClus.cpp  KMeansClus.hpp  Main.cpp  PixEucCalculator.cpp  PixEucCalculator.hpp  Printer.cpp  Printer.hpp  README.md  VideoCapturer.cpp  VideoCapturer.hpp
